Offer users an option to delete card from local if uploading failed

If uploading of a card failed, in the feedback dialog, we will show
a string 'invalid' and a trash can button. If the user clicks the button,
that card will be deleted from browser and will disappear in the
feedback dialog. If all invalid cards are deleted in the dialog, the
dialog will be updated to the 'finished' state.

If all cards failed, we will not show the "View cards button".

Uploaded screenshots in the bug (comment #10 and comment #26).

Using TBR because this merge had a conflict and needed to fix manually:
TBR=estade@chromium.org,tobiasjs@chromium.org,bsep@chromium.org,mahmadi@chromium.org

(cherry picked from commit faf2f325c1e61aee31e25dcc380e9b0ee72887e5 [formerly 26874dced3505ab4577ca03215e59cb042a01c58])

Bug: 913150
Change-Id: Iae7780027932ac530bcb2f0c643be1ec94d1f334
Reviewed-on: https://chromium-review.googlesource.com/c/1314129
Reviewed-by: Tobias Sargeant <tobiasjs@chromium.org>
Reviewed-by: Moe Ahmadi <mahmadi@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Jared Saul <jsaul@google.com>
Commit-Queue: Siyu An <siyua@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#614193}
Reviewed-on: https://chromium-review.googlesource.com/c/1369941
Cr-Commit-Position: refs/branch-heads/3626@{#234}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: bbb07a2bed8601c809fbaa4ed7447d7ed5de17ab