chrome/browser/ui/views/autofill/migratable_card_view.h
@@ -7,6 +7,7 @@
 
 #include "base/macros.h"
 #include "components/autofill/core/browser/local_card_migration_manager.h"
+#include "ui/views/controls/button/button.h"
 #include "ui/views/view.h"
 
 namespace views {
@@ -18,17 +19,18 @@ class ImageButton;
 namespace autofill {
 
 enum class LocalCardMigrationDialogState;
+class LocalCardMigrationDialogView;
 class MigratableCreditCard;
 
 // A view composed of a checkbox or an image indicating migration results, card
 // network image, card network, last four digits of card number and card
 // expiration date. Used by LocalCardMigrationDialogView.
-class MigratableCardView : public views::View {
+class MigratableCardView : public views::View, public views::ButtonListener {
  public:
   static const char kViewClassName[];
 
   MigratableCardView(const MigratableCreditCard& migratable_credit_card,
-                     views::ButtonListener* listener,
+                     LocalCardMigrationDialogView* parent_dialog,
                      bool should_show_checkbox);
   ~MigratableCardView() override;
 
@@ -38,6 +40,9 @@ class MigratableCardView : public views::View {
   // views::View
   const char* GetClassName() const override;
 
+  // views::ButtonListener
+  void ButtonPressed(views::Button* sender, const ui::Event& event) override;
+
  private:
   MigratableCreditCard migratable_credit_card_;
 
@@ -46,6 +51,8 @@ class MigratableCardView : public views::View {
   views::Checkbox* checkbox_ = nullptr;
 
   views::ImageButton* delete_card_from_local_button_ = nullptr;
+
+  LocalCardMigrationDialogView* parent_dialog_ = nullptr;
 
   DISALLOW_COPY_AND_ASSIGN(MigratableCardView);
 };
